[package]
name = "ks-curve-tracer"
version = "0.5.2-alpha.0"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
edition = "2018"
description = "Curve tracer GUI for AD2 curve tracer"
license = "MIT OR Apache-2.0"

[dependencies]
gtk = "0.6.0"
gdk = "0.10.0"
gdk-pixbuf = "0.6.0"
relm = "0.16.0"
relm-derive = "0.16.0"
relm-attributes = "0.16.0"
digilent-waveforms = "0.0.16"
cairo-rs = "0.6.0"
csv = "1"
serde = "1"
serde_derive = "1"
failure = "0.1.5"
itertools = "0.8.0"
itertools-num = "0.1.3"
time = "0.1.42"
nalgebra = "0.17.2"
num-traits = "0.2.6"
autodiff = "0.1.5"
structopt = "0.2.14"
structopt-derive = "0.2.14"
simplelog = "0.5.3"
log = "0.4.6"
measure_time = "0.6.0"
lazycell = "1.2.1"
noisy_float = "0.1.9"
lazy_static = "1.3.0"
libflate = "0.1"

[build-dependencies]
winres = "0.1.8"
failure = "0.1.5"

[dev-dependencies]
criterion = "0.2"

[features]
link-with-stub = ["digilent-waveforms/link-with-stub"]
default = ["link-with-stub", "relm/unstable", "relm-attributes/unstable", "relm-derive/unstable", "gtk/v3_16", "relm/hidpi"]

[[bin]]
name = "ks-curve-tracer"
path = "src/bin/gui.rs"

[[bin]]
name = "ks-curve-tracer-cli"
path = "src/bin/cli.rs"

[[bench]]
name = "benchmark"
harness = false

[package.metadata.release]
sign-commit = true
upload-doc = false
disable-publish = true
pre-release-replacements = [ {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"}, {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"} ]
pro-release-commit-message = "[skip ci] (cargo-release) start next development iteration {{next_version}}"

[package.metadata.arch]
pkgname = "ks-curve-tracer"
depends = ["core/libusb", "extra/gtk3", "extra/cairo"]

[package.metadata.deb]
depends = "libusb-1.0-0, libgtk-3-0, libcairo2, digilent.waveforms"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
ks-curve-tracer-cli = { path = "/usr/bin/ks-curve-tracercurve-tracer-cli" }
ks-curve-tracer = { path = "/usr/bin/ks-curve-tracer" }
