[package]
name = "ks-curve-tracer"
version = "1.0.0-beta.1"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
edition = "2018"
description = "Curve tracer GUI for AD2 curve tracer"
license = "MIT OR Apache-2.0"

[package.metadata.release]
sign-commit = true
disable-publish = true
pre-release-replacements = [ {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"}, {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"} ]
post-release-commit-message = "[skip ci] (cargo-release) start next development iteration {{next_version}}"

[package.metadata.arch]
pkgname = "ks-curve-tracer"
depends = ["core/libusb", "extra/gtk3", "extra/cairo"]

[package.metadata.deb]
depends = "libusb-1.0-0, libgtk-3-0, libcairo2, digilent.waveforms"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
ks-curve-tracer-cli = { path = "/usr/bin/ks-curve-tracercurve-tracer-cli" }
ks-curve-tracer = { path = "/usr/bin/ks-curve-tracer" }

[dependencies]
gtk = "0.7.0"
gdk = "0.11.0"
gdk-pixbuf = "0.7.0"
relm = "0.18.0"
relm-derive = "0.18.0"
digilent-waveforms = "0.0.16"
cairo-rs = "0.7.0"
csv = "1"
serde = "1"
serde_derive = "1"
failure = "0.1.5"
itertools = "0.8.0"
itertools-num = "0.1.3"
time = "0.1.18"
nalgebra = { git = "https://github.com/ilya-epifanov/nalgebra.git", rev = "56a3b55b9f1c9eb46f6501e30cff6d2f6877e38c" }
num-traits = "0.2.6"
autodiff = "0.1.5"
structopt = "0.3.9"
structopt-derive = "0.4.2"
simplelog = "0.7.4"
log = "0.4.6"
measure_time = "0.6.0"
lazycell = "1.2.1"
noisy_float = "0.1.9"
lazy_static = "1.3.0"
libflate = "0.1"

[build-dependencies]
winres = "0.1.8"
failure = "0.1.5"

[dev-dependencies]
approx = "0.3.2"
criterion = "0.3.1"
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"] }

[features]
link-with-stub = ["digilent-waveforms/link-with-stub"]
default = ["link-with-stub", "gtk/v3_16", "relm/hidpi"]

[[bin]]
name = "ks-curve-tracer"
path = "src/bin/gui.rs"

[[bin]]
name = "ks-curve-tracer-cli"
path = "src/bin/cli.rs"

[[bench]]
name = "benchmark"
harness = false

[patch.crates-io]
cairo-rs = { git = "https://github.com/ilya-epifanov/cairo.git", rev = "c70497324c627c1075cd70962edf9e3ea6c217a7" }
